--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -6,6 +6,7 @@
     background-color: black;
     width: 100vw;
     height: 8vh;
+    height: calc(var(--vh, 1vh) * 8);
     box-shadow: 0px 0px 5px var(--color-1);
 
     color: white;
